# meteo-french-api

./: .dockerignore  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  TECHSPECS.md  app.py  mfapi.yaml  push_docker.sh  pyproject.toml  requirements.txt  run.sh  run_docker_local.sh
meteofrenchapi/: __init__.py  config.py  controller.py  openapi.yaml
meteofrenchapi/core/: accuweather.py  accwea.py
meteofrenchapi/tests/: __init__.py  test_accuweather.py  test_accwea.py  test_app.py
quick_tests/: accuweather-client.ipynb  requirements.txt
tests/: accuweather-client.ipynb
